gadjid/src/snapshots/gadjid__test__large-CPDAG23-vs-CPDAG24.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-CPDAG-23
g_guess: 100-node-CPDAG-24
ancestor_aid:
  - 0.0044444444444444444
  - 44
oset_aid:
  - 0.02878787878787879
  - 285
parent_aid:
  - 0.08464646464646465
  - 838
shd:
  - 0.005454545454545455
  - 27
t:
  - 0
  - 3
  - 4
  - 6
  - 13
  - 26
  - 30
  - 31
  - 32
  - 33
  - 36
  - 41
  - 42
  - 46
  - 48
  - 51
  - 58
  - 59
  - 64
  - 66
  - 68
  - 70
  - 73
  - 74
  - 75
  - 76
  - 83
  - 87
  - 89
  - 90
  - 91
  - 93
  - 94
  - 96
  - 99
y: 62
z:
  - 1
  - 2
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 16
  - 19
  - 20
  - 22
  - 23
  - 25
  - 29
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 43
  - 44
  - 45
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 60
  - 61
  - 63
  - 67
  - 69
  - 71
  - 72
  - 78
  - 79
  - 81
  - 82
  - 84
  - 86
  - 88
  - 92
  - 95
possible_descendants_of_t_in_g_guess:
  - 0
  - 3
  - 4
  - 6
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 29
  - 34
  - 35
  - 49
  - 53
  - 62
oset_for_t_onto_y_in_g_guess:
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 21
  - 23
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 92
  - 93
  - 95
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 29
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 60
  - 61
  - 62
  - 63
  - 65
  - 67
  - 69
  - 71
  - 72
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 88
  - 92
  - 95
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 29
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 60
  - 61
  - 62
  - 63
  - 65
  - 67
  - 69
  - 71
  - 72
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 88
  - 92
  - 95
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 2
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 29
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 43
  - 44
  - 45
  - 47
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 60
  - 61
  - 62
  - 63
  - 65
  - 67
  - 69
  - 71
  - 72
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 86
  - 88
  - 92
  - 95
  - 97
  - 98
