gadjid/src/snapshots/gadjid__test__large-CPDAG25-vs-CPDAG26.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-CPDAG-25
g_guess: 100-node-CPDAG-26
ancestor_aid:
  - 0.1494949494949495
  - 1480
oset_aid:
  - 0.22121212121212122
  - 2190
parent_aid:
  - 0.6617171717171717
  - 6551
shd:
  - 0.4983838383838384
  - 2467
t:
  - 2
  - 3
  - 4
  - 6
  - 7
  - 12
  - 13
  - 15
  - 18
  - 21
  - 23
  - 25
  - 27
  - 29
  - 31
  - 32
  - 36
  - 41
  - 45
  - 49
  - 52
  - 57
  - 64
  - 65
  - 67
  - 68
  - 69
  - 70
  - 73
  - 74
  - 76
  - 80
  - 81
  - 85
  - 86
  - 88
  - 89
  - 93
  - 94
  - 98
y: 55
z:
  - 5
  - 33
  - 38
  - 44
  - 46
  - 47
  - 54
  - 59
  - 61
  - 63
  - 66
  - 75
  - 78
  - 83
  - 84
  - 92
  - 97
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 9
  - 10
  - 11
  - 14
  - 16
  - 17
  - 19
  - 20
  - 22
  - 24
  - 26
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 42
  - 43
  - 44
  - 46
  - 47
  - 48
  - 50
  - 51
  - 53
  - 54
  - 55
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 66
  - 71
  - 72
  - 75
  - 77
  - 78
  - 79
  - 82
  - 83
  - 84
  - 87
  - 90
  - 91
  - 92
  - 95
  - 96
  - 97
  - 99
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 5
  - 8
  - 9
  - 10
  - 11
  - 14
  - 16
  - 17
  - 19
  - 20
  - 22
  - 24
  - 26
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 42
  - 43
  - 44
  - 46
  - 47
  - 48
  - 51
  - 53
  - 55
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 8
  - 9
  - 10
  - 11
  - 14
  - 16
  - 17
  - 19
  - 20
  - 22
  - 24
  - 26
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 42
  - 43
  - 44
  - 46
  - 47
  - 48
  - 50
  - 51
  - 53
  - 54
  - 55
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 66
  - 71
  - 72
  - 75
  - 77
  - 78
  - 79
  - 82
  - 83
  - 84
  - 87
  - 90
  - 91
  - 92
  - 95
  - 96
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 5
  - 8
  - 9
  - 10
  - 11
  - 14
  - 16
  - 17
  - 19
  - 20
  - 22
  - 24
  - 26
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 42
  - 43
  - 44
  - 46
  - 47
  - 48
  - 50
  - 51
  - 53
  - 54
  - 55
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 66
  - 71
  - 72
  - 75
  - 77
  - 78
  - 79
  - 82
  - 83
  - 84
  - 87
  - 90
  - 91
  - 92
  - 95
  - 96
  - 97
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 5
  - 8
  - 9
  - 10
  - 11
  - 14
  - 16
  - 17
  - 19
  - 20
  - 22
  - 24
  - 26
  - 28
  - 30
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 42
  - 43
  - 44
  - 46
  - 47
  - 48
  - 50
  - 51
  - 53
  - 54
  - 55
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 66
  - 71
  - 72
  - 75
  - 77
  - 78
  - 79
  - 82
  - 83
  - 84
  - 87
  - 90
  - 91
  - 92
  - 95
  - 96
  - 97
  - 99
