gadjid/src/snapshots/gadjid__test__large-CPDAG26-vs-CPDAG27.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-CPDAG-26
g_guess: 100-node-CPDAG-27
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.008686868686868687
  - 86
parent_aid:
  - 0.14505050505050504
  - 1436
shd:
  - 0.00808080808080808
  - 40
t:
  - 0
  - 1
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 35
  - 36
  - 37
  - 38
  - 40
  - 41
  - 42
  - 43
  - 44
  - 46
  - 48
  - 50
  - 51
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 93
  - 94
  - 95
  - 96
  - 98
  - 99
y: 9
z:
  - 3
  - 12
  - 22
  - 34
  - 45
  - 49
  - 52
  - 62
  - 84
  - 86
  - 97
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 3
  - 9
  - 22
  - 39
  - 45
  - 47
  - 49
  - 52
  - 62
  - 84
  - 86
  - 92
  - 97
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 3
  - 9
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 3
  - 9
  - 12
  - 22
  - 34
  - 39
  - 45
  - 47
  - 49
  - 52
  - 62
  - 84
  - 86
  - 92
  - 97
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 3
  - 9
  - 12
  - 22
  - 34
  - 39
  - 45
  - 47
  - 49
  - 52
  - 62
  - 84
  - 86
  - 92
  - 97
not_validly_adjusted_for_in_g_guess_by_z:
  - 3
  - 9
  - 12
  - 22
  - 34
  - 39
  - 45
  - 47
  - 49
  - 52
  - 62
  - 84
  - 86
  - 92
  - 97
