gadjid/src/snapshots/gadjid__test__large-CPDAG29-vs-CPDAG20.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-CPDAG-29
g_guess: 100-node-CPDAG-20
ancestor_aid:
  - 0.4574747474747475
  - 4529
oset_aid:
  - 0.46646464646464647
  - 4618
parent_aid:
  - 0.8759595959595959
  - 8672
shd:
  - 0.5038383838383839
  - 2494
t:
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 17
  - 18
  - 21
  - 25
  - 27
  - 28
  - 29
  - 30
  - 31
  - 36
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 48
  - 49
  - 51
  - 52
  - 53
  - 55
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 67
  - 69
  - 70
  - 71
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 89
  - 92
  - 94
  - 99
y: 37
z:
  - 0
  - 1
  - 15
  - 16
  - 22
  - 24
  - 32
  - 33
  - 35
  - 46
  - 47
  - 50
  - 54
  - 66
  - 68
  - 73
  - 83
  - 87
  - 91
  - 95
  - 97
  - 98
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t:
  - 0
  - 1
  - 15
  - 22
  - 23
  - 24
  - 26
  - 32
  - 33
  - 34
  - 37
  - 46
  - 47
  - 50
  - 54
  - 57
  - 66
  - 68
  - 72
  - 73
  - 83
  - 86
  - 87
  - 88
  - 90
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 15
  - 16
  - 22
  - 23
  - 24
  - 37
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 15
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 86
  - 87
  - 88
  - 90
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 15
  - 16
  - 19
  - 20
  - 22
  - 23
  - 24
  - 26
  - 32
  - 33
  - 34
  - 35
  - 37
  - 46
  - 47
  - 50
  - 54
  - 57
  - 66
  - 68
  - 72
  - 73
  - 74
  - 83
  - 86
  - 87
  - 88
  - 90
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 15
  - 16
  - 19
  - 20
  - 22
  - 23
  - 24
  - 26
  - 32
  - 33
  - 34
  - 35
  - 37
  - 46
  - 47
  - 50
  - 54
  - 57
  - 66
  - 68
  - 72
  - 73
  - 74
  - 83
  - 86
  - 87
  - 88
  - 90
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 15
  - 16
  - 19
  - 20
  - 22
  - 23
  - 24
  - 26
  - 32
  - 33
  - 34
  - 35
  - 37
  - 46
  - 47
  - 50
  - 54
  - 57
  - 66
  - 68
  - 72
  - 73
  - 74
  - 83
  - 86
  - 87
  - 88
  - 90
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
