gadjid/src/snapshots/gadjid__test__large-DAG01-vs-DAG02.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10001.DAG-100
g_guess: 10002.DAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
shd:
  - 0.006464646464646465
  - 32
t:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 27
  - 28
  - 29
  - 30
  - 32
  - 33
  - 34
  - 35
  - 36
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 71
  - 72
  - 73
  - 74
  - 77
  - 78
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 91
  - 92
  - 94
  - 95
  - 96
  - 97
  - 99
y: 76
z:
  - 26
  - 37
  - 75
  - 98
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 7
  - 26
  - 54
  - 76
oset_for_t_onto_y_in_g_guess:
  - 2
  - 3
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 93
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 2
  - 3
  - 4
  - 7
  - 8
  - 26
  - 31
  - 37
  - 54
  - 69
  - 75
  - 76
  - 79
  - 90
  - 93
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 7
  - 8
  - 26
  - 31
  - 37
  - 54
  - 69
  - 75
  - 76
  - 79
  - 90
  - 93
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 7
  - 8
  - 26
  - 31
  - 37
  - 54
  - 69
  - 75
  - 76
  - 79
  - 90
  - 93
  - 98
