gadjid/src/snapshots/gadjid__test__large-DAG02-vs-DAG03.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10002.DAG-100
g_guess: 10003.DAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.018585858585858588
  - 184
parent_aid:
  - 0.06262626262626263
  - 620
shd:
  - 0.006262626262626263
  - 31
t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 13
  - 14
  - 16
  - 17
  - 19
  - 20
  - 21
  - 22
  - 23
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 34
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 82
  - 84
  - 85
  - 86
  - 87
  - 88
  - 90
  - 91
  - 93
  - 94
  - 95
  - 97
  - 98
  - 99
y: 35
z:
  - 11
  - 12
  - 15
  - 18
  - 24
  - 33
  - 53
  - 70
  - 81
  - 89
  - 92
  - 96
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 11
  - 15
  - 35
oset_for_t_onto_y_in_g_guess:
  - 4
  - 8
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 4
  - 8
  - 11
  - 12
  - 15
  - 18
  - 24
  - 33
  - 35
  - 53
  - 70
  - 81
  - 83
  - 89
  - 92
  - 96
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 11
  - 12
  - 15
  - 18
  - 24
  - 33
  - 35
  - 53
  - 70
  - 81
  - 83
  - 89
  - 92
  - 96
not_validly_adjusted_for_in_g_guess_by_z:
  - 11
  - 12
  - 15
  - 18
  - 24
  - 33
  - 35
  - 53
  - 70
  - 81
  - 83
  - 89
  - 92
  - 96
