gadjid/src/snapshots/gadjid__test__large-DAG03-vs-DAG04.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10003.DAG-100
g_guess: 10004.DAG-100
ancestor_aid:
  - 0.3331313131313131
  - 3298
oset_aid:
  - 0.40060606060606063
  - 3966
parent_aid:
  - 0.8334343434343434
  - 8251
shd:
  - 0.3208080808080808
  - 1588
t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 23
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 44
  - 45
  - 46
  - 48
  - 49
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 65
  - 66
  - 67
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 79
  - 80
  - 85
  - 86
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 96
  - 97
  - 98
y: 64
z:
  - 11
  - 24
  - 43
  - 47
  - 51
  - 76
  - 77
  - 78
  - 81
  - 82
  - 83
  - 84
  - 87
  - 95
  - 99
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 64
oset_for_t_onto_y_in_g_guess:
  - 0
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 92
  - 95
  - 96
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 4
  - 11
  - 21
  - 24
  - 42
  - 43
  - 47
  - 51
  - 64
  - 68
  - 76
  - 77
  - 78
  - 81
  - 82
  - 83
  - 84
  - 87
  - 95
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 11
  - 21
  - 24
  - 42
  - 43
  - 47
  - 51
  - 64
  - 68
  - 76
  - 77
  - 78
  - 81
  - 82
  - 83
  - 84
  - 87
  - 95
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 11
  - 21
  - 24
  - 42
  - 43
  - 47
  - 51
  - 64
  - 68
  - 76
  - 77
  - 78
  - 81
  - 82
  - 83
  - 84
  - 87
  - 95
  - 99
